--- a/app-content/app.css
+++ b/app-content/app.css
@@ -12,3 +12,13 @@ table tr:nth-child(odd) {
 table tr:nth-child(even) {
     background-color: #ffffff;
 }
+body{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-color: #eee;
+
+}
+.jumbotron{
+    margin-bottom:0px;
+}
